@@ -6,8 +6,12 @@
   notice and this notice are preserved.
 
 If your system is lacking the necessary tools to build the configuration,
-Makefile.try is provided for bootstraping.  Move Makefile.try to
-../src/Makefile, edit the Makefile and type make. Good luck !
+Makefile.boot is provided for bootstraping.  Invoke it with the following
+command:
 
-cp Makefile.try ../src/Makefile
-make
+  (cd src && make -f ../Makefile.boot)
+
+Indications on how to tweak Makefile.boot for different systems are
+provided in the file itself.
+
+Good luck!
