@@ -1,19 +1,0 @@
-## Process this file with automake to create Makefile.in
-# Copyright 1997, 1998, 2005, 2006, 2007, 2008, 2009 Free Software
-# Foundation, Inc.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3, or (at your option)
-# any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
-AUTOMAKE_OPTIONS = no-dependencies
-
-EXTRA_DIST = Makefile.try README
